--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="card-white" id="introduction">
-        <h1>Hi. I am Gin 🍸</h1>
+        <h1>Hi. I am Gin ! 🍸</h1>
         <img src="images/profile picture.jpg" class="img-circle" width="150px" alt="Gin Pan">
         <div class="hidden"><p>I am starting to like backend and frontend development,love badminton and workout 💪🏼. A potential programmer who loves money 🤑, freedom and woud love to spread a bit of kindness every now and then. Weee
         </p>
